# digicomply-uae-einvoicing

./: .gitignore  MANIFEST.in  README.md  TRAINING_DOCUMENT.md  TRAINING_MANUAL_COMPLETE.md  license.txt  pyproject.toml  requirements.txt  setup.py
digicomply/: __init__.py  api.py  boot.py  hooks.py  modules.txt  notifications.py  utils.py
digicomply/digicomply/: __init__.py
digicomply/digicomply/api/: __init__.py  compliance_score.py  connector_framework.py  fta_api.py
digicomply/digicomply/doctype/: __init__.py
digicomply/digicomply/doctype/api_log/: api_log.json  api_log.py
digicomply/digicomply/doctype/archive_retrieval_log/: __init__.py  archive_retrieval_log.json  archive_retrieval_log.py
digicomply/digicomply/fixtures/: invoice_type_code.json  role.json  tax_category_code.json
digicomply/public/css/: digicomply.css
digicomply/public/js/: digicomply.js  setup_wizard_override.js
digicomply/reconciliation/: tasks.py
digicomply/setup/: hide_workspaces.py  install.py  roles.py
digicomply/templates/emails/: auditor_access_granted.html  reconciliation_complete.html  standard_email.html  vat_deadline_reminder.html  welcome.html
digicomply/tests/: sample_asp_data.csv  test_core_flow.py
digicomply/www/: 403.html  404.html  500.html
docs/plans/: 2026-02-16-digicomply-branding-design.md  2026-02-16-digicomply-branding-implementation.md  2026-02-17-connor-gtm-implementation-plan.md  2026-02-17-connor-style-gtm-design.md  2026-02-17-digicomply-product-roadmap-design.md  2026-02-17-phase1-implementation-plan.md  2026-02-17-phase2-implementation-plan.md
(+158 files in other folders)
